# igc2kml

./: .gitignore  LICENSE  README.md  igc2kml.py  pyproject.toml
sample_files/: 2022_06_26_01-1718.IGC
src/igc2kml/: color_maps.py  igc2kml.py  launch_sites.py
utils/: colormaps_mpl_to_kml.py
